# gear-born

./: .env  .gitignore  Cargo.toml  TODO.md
.github/workflows/: release.yml
assets/biomes/: desert.json  desert_hills.json  jungle.json  mountain.json  mountains.json  ocean.json  plains.json  snow_plains.json  snowy_mountain.json
assets/blocks/: bloodsand_block.json  dirt_block.json  glass_block.json  grass_block.json  gravel_block.json  log_block.json  sand_block.json  snow_block.json  stone_block.json  water_block.json
assets/shaders/: water.wgsl
assets/textures/blocks/: tileset.json
assets/textures/blocks/bloodsand/: data.json
assets/textures/blocks/border/: data.json
assets/textures/blocks/clay/: data.json
assets/textures/blocks/deep_stone/: data.json
assets/textures/blocks/dirt/: data.json  tileset.json
assets/textures/blocks/glass/: data.json
assets/textures/blocks/grass/: data.json  tileset.json
assets/textures/blocks/gravel/: data.json
assets/textures/blocks/log/: data.json
assets/textures/blocks/sand/: data.json
assets/textures/blocks/sandstone/: data.json
assets/textures/blocks/snow/: data.json
assets/textures/blocks/stone/: data.json
assets/textures/blocks/water/: data.json
config/: gameAudio.toml  gameInput.toml  graphics.toml  graphicsConfig.toml  input.toml
crates/game_core/: Cargo.toml
crates/game_core/src/: assets.rs  camera.rs  config.rs  configuration.rs  debug.rs  lib.rs  load_state.rs  serde_defaults.rs  states.rs  v_ram_detection.rs
crates/game_core/src/events/: chunk_events.rs  mod.rs  player_block_events.rs  registry_events.rs
crates/game_core/src/player/: mod.rs  selection.rs
crates/game_core/src/shader/: mod.rs  water_material.rs
crates/game_core/src/world/: biome.rs  biome_plate.rs  block.rs  chunk.rs  chunk_dim.rs  fluid.rs  mod.rs  region.rs  save.rs
crates/game_core/src/world/biome/: biome_func.rs  mod.rs  registry.rs
crates/game_core/src/world/blocks/: mod.rs  registry.rs
crates/game_logic/: Cargo.toml
crates/game_logic/src/: camera.rs  debug_overlay.rs  lib.rs
crates/game_logic/src/events/: block_event_handler.rs  mod.rs
crates/game_logic/src/player/: change_game_mode.rs  cross_hair.rs  initialize.rs  look_at_service.rs  mod.rs  water_hud_fx.rs
crates/game_logic/src/player_services/: cross_hair.rs  initialize.rs  look_at_service.rs  mod.rs  water_hud_fx.rs
crates/game_logic/src/registry/: biome_registry.rs  block_registry.rs  mod.rs
crates/game_logic/src/world/: mod.rs  save_service.rs
crates/game_logic/src/world_services/: chunk_service.rs  chunk_utils.rs  mod.rs  save_service.rs
crates/game_logic/src/world_services/chunk/: chunk_service.rs  chunk_struct.rs  chunk_utils.rs  mod.rs
crates/game_service/: Cargo.toml
crates/game_service/src/: lib.rs
crates/game_service/src/registry/: block_registry.rs  mod.rs
crates/game_ui/: Cargo.toml
crates/game_ui/src/: default_font.rs  lib.rs
crates/game_ui/src/screens/: catalog_hud_screen.rs  loading_screen.rs  menu_screen.rs  mod.rs
crates/game_world/: Cargo.toml
crates/game_world/src/: lib.rs
crates/game_world/src/chunk/: biome_load.rs  cave_builder.rs  cave_utils.rs  chunk_builder.rs  chunk_gen.rs  chunk_struct.rs  chunk_utils.rs  mod.rs  river_utils.rs  water_builder.rs  water_utils.rs
crates/game_world/src/shader/: mod.rs  water_shader.rs
src/: main.rs  manager.rs
