[package]
name = "game_core"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_core"
path = "src/lib.rs"


[features]
default = []
# Use dep: syntax so Cargo weiß, dass diese Features nur die jeweilige Dependency aktivieren.
vram_nvml  = ["dep:nvml-wrapper"]  # NVIDIA per-process (Win/Linux)
vram_dxgi  = ["dep:windows"]       # Windows adapter-wide (AMD & NVIDIA)
vram_metal = ["dep:metal"]         # macOS device-wide

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "bevy_state",
    "bevy_log",
    "bevy_asset",
    "bevy_animation",
    "png",
    "bevy_text"
]

[dependencies.serde]
version = "1.0.223"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.143"

[dependencies.rand]
version = "0.9.2"

[dependencies.toml]
version = "0.9.5"
features = [
    "parse",
    "display"
]

[dependencies.sysinfo]
version = "0.37.0"

[dependencies]
nvml-wrapper = { version = "0.11.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", optional = true, features = [
    "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common"
] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.32.0", optional = true }