[package]
name = "game_logic"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_logic"
path = "src/lib.rs"

[dependencies.game_core]
path = "../game_core"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "bevy_state",
    "bevy_log",
    "bevy_asset",
    "bevy_gltf",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_animation",
    "animation",
    "tonemapping_luts",
    "bevy_window"
]

[dependencies.bevy_rapier3d]
version = "0.31.0"
features = [
    "default",
    "simd-stable",
    "debug-render-3d"
]
