[package]
name = "game_ui"
version = "0.1.0"
edition = "2024"
authors = ["Daniel Ramke <genshin.exepta@outlook.com>"]

[lib]
name = "game_ui"
path = "src/lib.rs"

[dependencies.game_core]
path = "../game_core"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_state",
    "bevy_ui",
    "bevy_log",
    "default_font",
    "multi_threaded",
    "png",
    "jpeg",
    "bevy_mesh_picking_backend",
    "bevy_picking"
]
