[package]
name = "game_world"
version = "0.1.0"
edition = "2024"

[lib]
name = "game_world"
path = "src/lib.rs"

[dependencies.game_core]
path = "../game_core"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "bevy_log",
    "bevy_asset",
]

[dependencies.bevy_rapier3d]
version = "0.31.0"
features = [
    "default",
    "simd-stable",
    "debug-render-3d"
]

[dependencies.fastnoise-lite]
version = "1.1.1"

[dependencies.lz4_flex]
version = "0.11.5"

[dependencies.futures-lite]
version = "2.6.1"

[dependencies.bincode]
version = "2.0.1"
default-features = false
features = ["alloc"]